--- a/draft1_problem_framing.ipynb
+++ b/draft1_problem_framing.ipynb
@@ -12,6 +12,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c5f2ec7",
+   "metadata": {},
+   "source": [
+    "### Dataset Attributes :\n",
+    "* id : unique identifier\n",
+    "\n",
+    "* gender : \"Male\", \"Female\" or \"Other\"\n",
+    "\n",
+    "* age : age of the patient\n",
+    "\n",
+    "* hypertension: 0 if the patient doesn't have hypertension, 1 if the patient has \n",
+    "hypertension\n",
+    "\n",
+    "* heart_disease : 0 if the patient doesn't have any heart diseases, 1 if the patient has a heart disease\n",
+    "\n",
+    "* ever_married : \"No\" or \"Yes\"\n",
+    "\n",
+    "* work_type : \"children\", \"Govt_jov\", \"Never_worked\", \"Private\" or \"Self-employed\"\n",
+    "\n",
+    "* Residence_type : \"Rural\" or \"Urban\"\n",
+    "\n",
+    "* avg_glucose_level : average glucose level in blood\n",
+    "\n",
+    "* bmi : body mass index\n",
+    "\n",
+    "* smoking_status : \"formerly smoked\", \"never smoked\", \"smokes\" or \"Unknown\"*\n",
+    "\n",
+    "* stroke : 1 if the patient had a stroke or 0 if not"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7130a3ca",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "b0a22f90",
    "metadata": {},
    "source": []
