--- a/draft2_EDA.ipynb
+++ b/draft2_EDA.ipynb
@@ -552,14 +552,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "130fb1f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "id": "f649a3ed",
    "metadata": {},
@@ -922,13 +914,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "d2649a3a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Applying one hot encoding:\n",
-    "DF = pd.get_dummies(DF, columns=['work_type', 'Residence_type', 'smoking_status'], dtype=int)\n"
+    "DF = pd.get_dummies(DF, columns=['work_type', 'Residence_type', 'smoking_status'], dtype=int)"
    ]
   },
   {
