--- a/Stroke_Pred_ML.ipynb
+++ b/Stroke_Pred_ML.ipynb
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0cec423a",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
     "for col in text_data_features:\n",
     "    le = LabelEncoder()\n",
     "    df1[col] = le.fit_transform(df1[col])\n",
-    "    encoders[col] = le  # store to inverse if needed later\n",
+    "    encoders[col] = le \n",
     "    print(f\"{col} : {dict(zip(le.classes_, le.transform(le.classes_)))}\")\n"
    ]
   },
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2be9ddee",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
     }
    ],
    "source": [
-    "clf_gini = DecisionTreeClassifier(criterion='gini', random_state=0,max_depth= 5)\n",
+    "clf_gini = DecisionTreeClassifier(criterion='gini', random_state=42,max_depth= 5)\n",
     "clf_gini.fit(X_train, y_train)\n",
     "y_pred_gini = clf_gini.predict(X_test)\n",
     "\n",
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "105750a1",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1000,7 @@
    ],
    "source": [
     "#Applying DT Model in UnderSampling:\n",
-    "clf_gini_under = DecisionTreeClassifier(criterion='gini', random_state=0, max_depth=5)\n",
+    "clf_gini_under = DecisionTreeClassifier(criterion='gini', random_state=42, max_depth=5)\n",
     "clf_gini_under.fit(X_train_under, y_train_under)\n",
     "y_pred_gini_under = clf_gini_under.predict(X_test_under)\n",
     "\n",
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "40ca2303",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1052,7 @@
    ],
    "source": [
     "#Applying DT Model in OverSampling:\n",
-    "clf_gini_over = DecisionTreeClassifier(criterion='gini', random_state=0, max_depth=5)\n",
+    "clf_gini_over = DecisionTreeClassifier(criterion='gini', random_state=42, max_depth=5)\n",
     "clf_gini_over.fit(X_train_over, y_train_over)\n",
     "y_pred_gini_over = clf_gini_over.predict(X_test_over)\n",
     "\n",
@@ -2176,7 +2176,7 @@
    "id": "8e47ea8f",
    "metadata": {},
    "source": [
-    "## <b> <font color=green> STEP (6) Results Interpretation & Deployment </font> </b>"
+    "## <b> <font color=green> Results Interpretation & Deployment </font> </b>"
    ]
   },
   {
