--- a/Stroke_Pred_ML.ipynb
+++ b/Stroke_Pred_ML.ipynb
@@ -590,6 +590,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "717920f8",
+   "metadata": {},
+   "source": [
+    "* Mean values of all the features for cases of stroke suffered and no stroke suffered.\n",
+    "\n",
+    "* age and avg_glucose_level can be solid 1st hand indicators to identify a stroke.\n",
+    "* Mean age values of patients that suffered a stroke, 67.73,is much higher than those did not suffer a stroke, 41.97.\n",
+    "* Similarly, avg_glucose_level value of 132.54 can indicate a higher chance of suffering from stroke than the avg_glucose_level value of 104.80 that has been found in patients that did not suffer a stroke"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "31a0d0c9",
    "metadata": {},
    "source": [
@@ -739,18 +751,6 @@
     "    title = 'Distribution : ' + discrete_features[i]\n",
     "    plt.title(title)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e3004117",
-   "metadata": {},
-   "source": [
-    "* Mean values of all the features for cases of stroke suffered and no stroke suffered.\n",
-    "\n",
-    "* age and avg_glucose_level can be solid 1st hand indicators to identify a stroke.\n",
-    "* Mean age values of patients that suffered a stroke, 67.73,is much higher than those did not suffer a stroke, 41.97.\n",
-    "* Similarly, avg_glucose_level value of 132.54 can indicate a higher chance of suffering from stroke than the avg_glucose_level value of 104.80 that has been found in patients that did not suffer a stroke"
    ]
   },
   {
@@ -1657,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "7193751f",
    "metadata": {},
    "outputs": [
@@ -1748,7 +1748,7 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('Combined ROC Curve for All Models')\n",
     "plt.legend(loc='lower right')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "e37bf163",
    "metadata": {},
    "outputs": [
@@ -1856,10 +1856,7 @@
    ],
    "source": [
     "from sklearn.ensemble import VotingClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
     "\n",
     "log_clf = LogisticRegression()\n",
     "dt_clf = DecisionTreeClassifier(max_depth=5)\n",
@@ -1890,56 +1887,6 @@
     "f1 = metrics.f1_score(y_test_over, ensemble_pred)\n",
     "\n",
     "print(f\"Soft-Voting Ensemble Evaluation:\")\n",
-    "print(f\"Accuracy  : {acc:.4f}\")\n",
-    "print(f\"Precision : {prec:.4f}\")\n",
-    "print(f\"Recall    : {rec:.4f}\")\n",
-    "print(f\"F1 Score  : {f1:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "acdd67dc",
-   "metadata": {},
-   "source": [
-    "#### Boosting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "3ac69ffe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gradient Boosting Evaluation:\n",
-      "Accuracy  : 0.8622\n",
-      "Precision : 0.8349\n",
-      "Recall    : 0.9021\n",
-      "F1 Score  : 0.8672\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "gb = GradientBoostingClassifier(n_estimators=100, random_state=42)\n",
-    "gb.fit(X_train_selected, y_train_over)\n",
-    "\n",
-    "gb_pred = gb.predict(X_test_selected)\n",
-    "\n",
-    "acc = metrics.accuracy_score(y_test_over, gb_pred)\n",
-    "\n",
-    "prec = metrics.precision_score(y_test_over, gb_pred)\n",
-    "\n",
-    "rec = metrics.recall_score(y_test_over, gb_pred)\n",
-    "\n",
-    "f1 = metrics.f1_score(y_test_over, gb_pred)\n",
-    "\n",
-    "print(f\"Gradient Boosting Evaluation:\")\n",
     "print(f\"Accuracy  : {acc:.4f}\")\n",
     "print(f\"Precision : {prec:.4f}\")\n",
     "print(f\"Recall    : {rec:.4f}\")\n",
